[package]
name = "waitgroup"
version = "0.1.2"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/laizy/waitgroup-rs"
repository = "https://github.com/laizy/waitgroup-rs"
description = "Async waitgroup for a collection of task to finish"
documentation = "https://docs.rs/waitgroup"
keywords = ["waitgroup", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = ["futures-util"]

[dependencies]
atomic-waker = { version = "1.0.0", optional = true }
futures-util = { version = "0.3.19", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "time", "macros"] }
